Fix the z-index to render dropdown properly (#227)
Also: changed base branch from `main` to `internship-main`

--- a/src/components/Events/style.scss
+++ b/src/components/Events/style.scss
@@ -67,7 +67,7 @@
     top: 80px;
     top: 80px;
     right: 20px;
-    z-index: 10;
+    z-index: 8;
   }
 
   h1 {
